fix quiz layout on Safari

--- a/resources/public/css/layout.css
+++ b/resources/public/css/layout.css
@@ -198,3 +198,7 @@ div#searchresults {
 table.question td.question_text {
     width:20em;
 }
+
+div.respond {
+    margin:0.3em;
+}
